--- a/cam.css
+++ b/cam.css
@@ -23,7 +23,6 @@ table {
 }
 
 *.bigred {
-    color:#DC143C;
     color:#bb0000;
     text-decoration: none;
     font-size: 20px;
@@ -55,13 +54,26 @@ button.paging {
 }
 
 button.nav {
-    width:100%;
+    width: 200px;
     height:50px;
     text-decoration: none;
     background-color:#006400;
-    color:#ddd;
+    color:#ddd; 
     border-radius: 10px;
     border-color: #ddd;
+    font-size: 16px;
+    padding:5px;    
+}
+
+button.title {
+    width: 80px;
+    height:50px;
+    text-decoration: none;
+    background-color:#bb0000;
+    color:#ddd; 
+    border-radius: 10px;
+    border-color: #ddd;
+    font-size: 20px;
     padding:5px;    
 }
 
